# src/department/DTO/create-department.dto.ts
@@ -1,0 +1,7 @@
+export class CreateDepartmentDto {
+  /**
+   * @type {string}
+   * @memberof Department
+   */
+  name: string;
+}
